codex-src/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  /model add enables more models from your providers; /model probe re-detects

  1. Add custom model              Connect a new provider: enter its URL and
                                   API key, then pick models
› 2. test-visible-model (current)  test-visible-model description

  Press enter to confirm or esc to go back
